Fix text input stretching on small devices

--- a/src/scss/components/_searchbar.scss
+++ b/src/scss/components/_searchbar.scss
@@ -3,12 +3,14 @@
 .searchbar {
   display: flex;
   flex: 1;
+  min-width: 0;
   gap: 0.25rem;
   border-radius: 2rem;
   box-shadow: 0 0 1rem 0 get-color("shadow");
 
   &-input {
     flex: 1;
+    min-width: 0;
     border: none;
     border-radius: 2rem 0 0 2rem;
     padding: 0.75rem 1rem;
